# autobyteus_mcps

./: .gitignore  README.md
alexa-mcp/: .gitignore  README.md  pyproject.toml
alexa-mcp/scripts/: alexa_adapter.sh  bootstrap_alexa_adapter.sh
alexa-mcp/src/alexa_mcp/: __init__.py  config.py  runner.py  server.py
alexa-mcp/tests/: test_config.py  test_runner.py  test_server.py
browser-mcp/: .env.test  README.md  pyproject.toml
browser-mcp/src/browser_mcp/: cleaning.py  server.py  sessions.py  tabs.py  types.py  utils.py
browser-mcp/src/browser_mcp/tools/: __init__.py  close_browser_session.py  close_tab.py  dom_snapshot.py  execute_script.py  list_browser_sessions.py  list_tabs.py  navigate_to.py  open_browser_session.py  open_tab.py  read_page.py  read_webpage.py  run_script.py  screenshot.py  take_webpage_screenshot.py  trigger_web_element.py
browser-mcp/tests/: conftest.py  test_integration_real.py  test_server.py
browser-mcp/tickets/active-tab-default-behavior/: implementation-plan.md  implementation-progress.md  proposed-design-based-runtime-call-stack.md  proposed-design.md  requirements.md  runtime-call-stack-review.md
browser-mcp/tickets/strict-tab-id-contract/: implementation-plan.md  implementation-progress.md  investigation-notes.md  proposed-design-based-runtime-call-stack.md  requirements.md  runtime-call-stack-review.md
browser-mcp/tickets/tool-naming-simplification/: implementation-plan.md  implementation-progress.md  proposed-design-based-runtime-call-stack.md  requirements.md  runtime-call-stack-review.md
moss-ttsd-mcp/: README.md  pyproject.toml  server.py
moss-ttsd-mcp/tests/: test_integration.py  test_server.py
neutts-air-mcp/: README.md  pyproject.toml  server.py
neutts-air-mcp/tests/: test_server.py
pdf_mcp/: README.md  pyproject.toml  requirements.txt
pdf_mcp/docs/: page_image_tool_design.md
pdf_mcp/src/pdf_mcp/: __init__.py  server.py
pdf_mcp/tests/: test_server.py
pptx-mcp/: GEMINI.md  README.md  pyproject.toml
pptx-mcp/app/: main.py
pptx-mcp/conductor/: tracks.md
pptx-mcp/conductor/tracks/001-vertical-concat/: plan.md
pptx-mcp/conductor/tracks/002-refactor-combine-images/: plan.md
pptx-mcp/tests/: create_samples.py  test_server.py
ssh-mcp/: README.md  pyproject.toml
ssh-mcp/docs/: runtime-flow.md
ssh-mcp/src/ssh_mcp/: __init__.py  config.py  runner.py  server.py
ssh-mcp/tests/: test_config.py  test_e2e_docker.py  test_runner.py  test_server.py
ssh-mcp/tests/e2e/: Dockerfile  entrypoint.sh
tickets/done/ssh-mcp/: future-state-runtime-call-stack-review.md  future-state-runtime-call-stack.md  implementation-plan.md  implementation-progress.md  investigation-notes.md  proposed-design.md  requirements.md
tickets/done/tts-mcp-linux-kokoro-cpu-backend/: future-state-runtime-call-stack-review.md  future-state-runtime-call-stack.md  implementation-plan.md  implementation-progress.md  investigation-notes.md  proposed-design.md  requirements.md
tickets/done/tts-mcp-linux-speak-enable/: future-state-runtime-call-stack-review.md  future-state-runtime-call-stack.md  implementation-plan.md  implementation-progress.md  investigation-notes.md  requirements.md
tts-mcp/: .gitignore  README.md  pyproject.toml
tts-mcp/benchmark/: mlx_performance_latest.json
tts-mcp/scripts/: benchmark_mlx_models.py  install_kokoro_onnx_linux.sh  install_llama_tts_linux.sh  install_llama_tts_macos.sh  install_mlx_audio_macos.sh  install_tts_runtime.sh  smoke_llama_tts_macos.sh
tts-mcp/src/tts_mcp/: __init__.py  config.py  platform.py  runner.py  runtime_bootstrap.py  server.py  version_check.py
tts-mcp/tests/: test_config.py  test_linux_installer.py  test_platform.py  test_real_linux_kokoro_chinese.py  test_real_mcp_speak_tool.py  test_real_mlx_models.py  test_runner.py  test_runtime_bootstrap.py  test_server.py  test_version_check.py
video-audio-mcp/: README.md  core.py  server.py
video-audio-mcp/tests/: test_concatenate_videos.py  test_extract_frame.py  test_replace_audio.py  test_trim_video.py  test_video_creation.py  test_video_functions.py
video-audio-mcp/tools/: __init__.py  composition.py  editing.py  properties.py
