[project]
name = "moss-ttsd-mcp"
version = "0.1.0"
description = "MCP server for generating bilingual dialogue speech with fnlp/MOSS-TTSD-v0.5"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "transformers>=4.46.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "soundfile>=0.12.1",
    "typer>=0.12.5",
    "pydantic>=2.10.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"
