[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-mcp-server"
version = "0.1.0"
description = "MCP server providing PDF page reading tools"
authors = [{name = "Autobyteus"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.13.1",
    "pypdf>=6.0.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-anyio>=0",
    "trio>=0.23",
]

[project.scripts]
pdf-mcp-server = "pdf_mcp.server:main"

[tool.pytest.ini_options]
addopts = "-q"
