[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts-mcp"
version = "0.1.0"
description = "MCP server with one speak tool that auto-selects MLX Audio on Apple Silicon and llama.cpp on Linux NVIDIA"
authors = [{ name = "Autobyteus" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
  "mcp>=1.13.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-anyio>=0",
  "anyio>=4.0",
]

[project.scripts]
tts-mcp-server = "tts_mcp.server:main"

[tool.pytest.ini_options]
addopts = "-q"
